test: BookService, Controller 테스트 코드 구현