@@ -12,6 +12,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.util.ReflectionTestUtils;
 import shop.chaekmate.core.book.dto.request.BookCreateRequest;
 import shop.chaekmate.core.book.dto.request.BookSearchCondition;
@@ -43,8 +44,8 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.BDDMockito.*;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 
+@ActiveProfiles("test")
 @ExtendWith(MockitoExtension.class)
 @DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
 class BookServiceTest {
@@ -113,7 +114,6 @@ class BookServiceTest {
 
     @Test
     void 도서_생성_성공() {
-        // given
         BookCreateRequest request = new BookCreateRequest(
                 "새 책",
                 "목차",
@@ -138,16 +138,14 @@ class BookServiceTest {
 
         bookService.createBook(request);
 
-        // when, then
-        then(bookRepository).should(times(1)).save(any(Book.class));
-        then(bookImageRepository).should(times(1)).save(any(BookImage.class));
-        then(bookCategoryRepository).should(times(1)).save(any(BookCategory.class));
-        then(bookTagRepository).should(times(1)).save(any(BookTag.class));
+        then(bookRepository).should().save(any(Book.class));
+        then(bookImageRepository).should().save(any(BookImage.class));
+        then(bookCategoryRepository).should().save(any(BookCategory.class));
+        then(bookTagRepository).should().save(any(BookTag.class));
     }
 
     @Test
     void 도서_생성_실패_카테고리_없음() {
-        // given
         BookCreateRequest request = new BookCreateRequest(
                 "새 책",
                 "목차",
@@ -169,7 +167,6 @@ class BookServiceTest {
         given(bookRepository.save(any(Book.class))).willReturn(book);
         given(categoryRepository.findAllById(anyList())).willReturn(List.of(category));
 
-        // when, then
         assertThatThrownBy(() -> bookService.createBook(request))
                 .isInstanceOf(CategoryNotFoundException.class)
                 .hasMessage("일부 카테고리 ID를 찾을 수 없습니다.");
@@ -177,7 +174,6 @@ class BookServiceTest {
 
     @Test
     void 도서_생성_실패_태그_없음() {
-        // given
         BookCreateRequest request = new BookCreateRequest(
                 "새 책",
                 "목차",
@@ -200,8 +196,6 @@ class BookServiceTest {
         given(categoryRepository.findAllById(anyList())).willReturn(List.of(category));
         given(tagRepository.findAllById(anyList())).willReturn(List.of(tag));
 
-
-        // when, then
         assertThatThrownBy(() -> bookService.createBook(request))
                 .isInstanceOf(TagNotFoundException.class)
                 .hasMessage("일부 태그 ID를 찾을 수 없습니다.");
@@ -209,7 +203,6 @@ class BookServiceTest {
 
     @Test
     void 도서_수정_실패_책_없음() {
-        // given
         Long bookId = 10000000000L;
 
         BookUpdateRequest request = new BookUpdateRequest(
@@ -232,18 +225,13 @@ class BookServiceTest {
 
         given(bookRepository.findById(bookId)).willReturn(Optional.empty());
 
-        // when, then
         assertThatThrownBy(() -> bookService.updateBook(bookId, request))
                 .isInstanceOf(BookNotFoundException.class)
                 .hasMessageContaining("Book id 10000000000 not found");
     }
 
-    /**
-     * 테스트: 도서 수정 실패 - 이미지 없음
-     */
     @Test
     void 도서_수정_실패_이미지_없음() {
-        // given
         Long bookId = 1L;
 
         BookUpdateRequest request = new BookUpdateRequest(
@@ -256,7 +244,7 @@ class BookServiceTest {
                 "9781234567890",
                 10000,
                 9000,
-                "https://example.com/new-image.jpg",  // imageUrl
+                "https://example.com/new-image.jpg",
                 true,
                 false,
                 100,
@@ -267,7 +255,6 @@ class BookServiceTest {
         given(bookRepository.findById(bookId)).willReturn(Optional.of(book));
         given(bookImageRepository.findByBookId(bookId)).willReturn(Optional.empty());
 
-        // when, then
         assertThatThrownBy(() -> bookService.updateBook(bookId, request))
                 .isInstanceOf(BookImageNotFoundException.class)
                 .hasMessage("책 이미지를 찾을 수 없습니다.");
@@ -275,7 +262,6 @@ class BookServiceTest {
 
     @Test
     void 도서_삭제_성공() {
-        // given
         Long bookId = 1L;
 
         given(bookRepository.findById(bookId)).willReturn(Optional.of(book));
@@ -283,13 +269,13 @@ class BookServiceTest {
 
         bookService.deleteBook(bookId);
 
-        then(bookRepository).should(times(1)).findById(bookId);
-        then(bookRepository).should(times(1)).delete(book);
+        then(bookRepository).should().findById(bookId);
+        then(bookRepository).should().delete(book);
     }
 
     @Test
     void 도서_삭제_실패_책_없음() {
-        Long bookId = 999L;
+        Long bookId = 10000000000L;
 
         given(bookRepository.findById(bookId)).willReturn(Optional.empty());
 
@@ -318,13 +304,13 @@ class BookServiceTest {
 
     @Test
     void 도서_조회_실패_책_없음() {
-        Long bookId = 999L;
+        Long bookId = 10000000000L;
 
         given(bookRepository.findById(bookId)).willReturn(Optional.empty());
 
         assertThatThrownBy(() -> bookService.getBook(bookId))
                 .isInstanceOf(BookNotFoundException.class)
-                .hasMessageContaining("Book id 999 not found");
+                .hasMessageContaining("Book id 10000000000 not found");
     }
 
     @Test
@@ -339,71 +325,12 @@ class BookServiceTest {
                 .hasMessage("책 이미지를 찾을 수 없습니다.");
     }
 
-    // ========== getBookList 테스트 ========== ⭐ 수정됨!
-
-    /**
-     * 테스트: 도서 목록 조회 성공
-     *
-     * 시나리오: QueryDSL을 통한 최적화된 도서 목록 조회
-     */
     @Test
     void 도서_목록_조회_성공() {
-        // given
-        Pageable pageable = PageRequest.of(0, 10);
-
-        // BookSearchCondition 생성
-        BookSearchCondition condition = new BookSearchCondition(
-                null,  // categoryId
-                null,  // tagId
-                null   // keyword
-        );
-
-        // BookListResponse 생성 (id, title, author, publisher, salesPrice만 포함)
-        BookListResponse bookListResponse = new BookListResponse(
-                1L,
-                "테스트 책",
-                "테스트 저자",
-                "테스트 출판사",
-                9000
-        );
-
-        // Page<BookListResponse> 생성
-        Page<BookListResponse> expectedPage = new PageImpl<>(
-                List.of(bookListResponse),
-                pageable,
-                1
-        );
-
-        // Mock 동작: searchBooks 메서드가 호출되면 expectedPage 반환
-        given(bookRepository.searchBooks(any(BookSearchCondition.class), any(Pageable.class)))
-                .willReturn(expectedPage);
-
-        // when
-        Page<BookListResponse> result = bookService.getBookList(condition, pageable);
-
-        // then
-        assertThat(result).isNotNull();
-        assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getTotalElements()).isEqualTo(1);
-        assertThat(result.getContent().get(0).title()).isEqualTo("테스트 책");
-        assertThat(result.getContent().get(0).author()).isEqualTo("테스트 저자");
-        assertThat(result.getContent().get(0).publisher()).isEqualTo("테스트 출판사");
-        assertThat(result.getContent().get(0).salesPrice()).isEqualTo(9000);
-
-        // searchBooks 메서드가 1번 호출되었는지 검증
-        then(bookRepository).should(times(1)).searchBooks(any(BookSearchCondition.class), any(Pageable.class));
-    }
-
-    /**
-     * 테스트: 카테고리 필터링으로 도서 목록 조회
-     */
-    @Test
-    void 도서_목록_조회_카테고리_필터링() {
-        // given
         Pageable pageable = PageRequest.of(0, 10);
 
         BookSearchCondition condition = new BookSearchCondition(
-                1L,    // categoryId - 카테고리 필터
+                null,
                 null,
                 null
         );
@@ -425,27 +352,61 @@ class BookServiceTest {
         given(bookRepository.searchBooks(any(BookSearchCondition.class), any(Pageable.class)))
                 .willReturn(expectedPage);
 
-        // when
         Page<BookListResponse> result = bookService.getBookList(condition, pageable);
 
-        // then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-        then(bookRepository).should(times(1)).searchBooks(any(BookSearchCondition.class), any(Pageable.class));
+        assertThat(result.getTotalElements()).isEqualTo(1);
+        assertThat(result.getContent().getFirst().title()).isEqualTo("테스트 책");
+        assertThat(result.getContent().getFirst().author()).isEqualTo("테스트 저자");
+        assertThat(result.getContent().getFirst().publisher()).isEqualTo("테스트 출판사");
+        assertThat(result.getContent().getFirst().salesPrice()).isEqualTo(9000);
+
+        then(bookRepository).should().searchBooks(any(BookSearchCondition.class), any(Pageable.class));
     }
 
-    /**
-     * 테스트: 키워드 검색으로 도서 목록 조회
-     */
+    @Test
+    void 도서_목록_조회_카테고리_필터링() {
+        Pageable pageable = PageRequest.of(0, 10);
+
+        BookSearchCondition condition = new BookSearchCondition(
+                1L,
+                null,
+                null
+        );
+
+        BookListResponse bookListResponse = new BookListResponse(
+                1L,
+                "테스트 책",
+                "테스트 저자",
+                "테스트 출판사",
+                9000
+        );
+
+        Page<BookListResponse> expectedPage = new PageImpl<>(
+                List.of(bookListResponse),
+                pageable,
+                1
+        );
+
+        given(bookRepository.searchBooks(any(BookSearchCondition.class), any(Pageable.class)))
+                .willReturn(expectedPage);
+
+        Page<BookListResponse> result = bookService.getBookList(condition, pageable);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getContent()).hasSize(1);
+        then(bookRepository).should().searchBooks(any(BookSearchCondition.class), any(Pageable.class));
+    }
+
     @Test
     void 도서_목록_조회_키워드_검색() {
-        // given
         Pageable pageable = PageRequest.of(0, 10);
 
         BookSearchCondition condition = new BookSearchCondition(
                 null,
                 null,
-                "자바"  // keyword - 검색어
+                "자바"
         );
 
         BookListResponse bookListResponse = new BookListResponse(
@@ -465,31 +426,25 @@ class BookServiceTest {
         given(bookRepository.searchBooks(any(BookSearchCondition.class), any(Pageable.class)))
                 .willReturn(expectedPage);
 
-        // when
         Page<BookListResponse> result = bookService.getBookList(condition, pageable);
 
-        // then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
         assertThat(result.getContent().get(0).title()).contains("자바");
-        then(bookRepository).should(times(1)).searchBooks(any(BookSearchCondition.class), any(Pageable.class));
+        then(bookRepository).should().searchBooks(any(BookSearchCondition.class), any(Pageable.class));
     }
 
-    /**
-     * 테스트: 도서 목록 조회 - 빈 결과
-     */
     @Test
     void 도서_목록_조회_빈_결과() {
         // given
         Pageable pageable = PageRequest.of(0, 10);
 
         BookSearchCondition condition = new BookSearchCondition(
-                999L,  // 존재하지 않는 카테고리
+                10000000000L,
                 null,
                 null
         );
 
-        // 빈 Page 반환
         Page<BookListResponse> emptyPage = new PageImpl<>(
                 new ArrayList<>(),
                 pageable,
@@ -499,17 +454,13 @@ class BookServiceTest {
         given(bookRepository.searchBooks(any(BookSearchCondition.class), any(Pageable.class)))
                 .willReturn(emptyPage);
 
-        // when
         Page<BookListResponse> result = bookService.getBookList(condition, pageable);
 
-        // then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).isEmpty();
         assertThat(result.getTotalElements()).isEqualTo(0);
-        then(bookRepository).should(times(1)).searchBooks(any(BookSearchCondition.class), any(Pageable.class));
+        then(bookRepository).should().searchBooks(any(BookSearchCondition.class), any(Pageable.class));
     }
-
-    // ========== searchFromAladin 테스트 ========== (변경 없음)
 
     @Test
     void 알라딘_검색_성공() {
@@ -547,7 +498,7 @@ class BookServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
         assertThat(result.getTotalElements()).isEqualTo(50);
-        assertThat(result.getContent().get(0).title()).isEqualTo("어린 왕자");
+        assertThat(result.getContent().getFirst().title()).isEqualTo("어린 왕자");
     }
 
     @Test
@@ -588,8 +539,6 @@ class BookServiceTest {
         assertThat(result.getTotalElements()).isEqualTo(0);
     }
 
-    // ========== registerFromAladin 테스트 ========== (변경 없음)
-
     @Test
     void 알라딘_도서_등록_성공() {
         AladinBookRegisterRequest request = new AladinBookRegisterRequest(
@@ -617,10 +566,10 @@ class BookServiceTest {
 
         bookService.registerFromAladin(request);
 
-        then(bookRepository).should(times(1)).save(any(Book.class));
-        then(bookImageRepository).should(times(1)).save(any(BookImage.class));
-        then(bookCategoryRepository).should(times(1)).save(any(BookCategory.class));
-        then(bookTagRepository).should(times(1)).save(any(BookTag.class));
+        then(bookRepository).should().save(any(Book.class));
+        then(bookImageRepository).should().save(any(BookImage.class));
+        then(bookCategoryRepository).should().save(any(BookCategory.class));
+        then(bookTagRepository).should().save(any(BookTag.class));
     }
 
     @Test
